# django-recompi

./: .editorconfig  .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
django_recompi/: __init__.py  apps.py  models.py
docs/: advanced.md  settings.md
tests/: manage.py  requirements.txt
tests/django_recompi_test/: asgi.py  settings.py  urls.py  wsgi.py
tests/testi/: __init__.py  apps.py  models.py
tests/testi/management/commands/: seed.py
tests/testi/migrations/: 0001_initial.py
